--- a/Pages/UserManagement/EditAdmin.cshtml
+++ b/Pages/UserManagement/EditAdmin.cshtml
@@ -20,10 +20,14 @@
                 <h6 class="text-dark">Admin</h6>
             </div>
         </div>
-        <form method="POST">
+        <form method="POST" id="editUserForm">
             <div class="row mb-3 user-container">
                 <input type="hidden" name="userID" value="@Model.userID" />
                 
+                <div class="row mb-3">
+                    <p class="text-danger text-end">* Required field</p>
+                </div>
+
                 <!-- User ID -->
                 <div class="row mb-3 pb-1">
                     <label class="form-label">User ID: @Model.userID</label>
@@ -46,21 +50,39 @@
                 <!-- Cancel and Save Button -->
                 <div class="button-spacer">
                     <a class="btn btn-outline-secondary mr-10" href="/UserManagement/Index" role="button">Cancel</a>
-                    <button type="submit" class="btn btn-primary" id="submitBtn">Save</button>
+                    <button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
                 </div>
             </div>
         </form>
     </div>
 </div>
 
+<!-- Modal: Confirm Save -->
+<div class="modal" id="editConfirmationModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirm Edit</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to save the changes?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="saveChangesButton">Save Changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Enable/disable "Submit" button -->
 <script>
     const submitButton = document.getElementById('submitBtn');
     const form = document.querySelector('form');
 
-    // Disable the submit button by default
     submitButton.disabled = true;
 
-    // Function to check form validity and enable/disable the submit button
     function checkFormValidity() {
         if (form.checkValidity()) {
             submitButton.disabled = false;
@@ -69,6 +91,12 @@
         }
     }
 
-    // Add an event listener for the input event on form elements
     form.addEventListener('input', checkFormValidity);
+</script>
+
+<!-- Save Changes -->
+<script>
+    document.getElementById('saveChangesButton').addEventListener('click', function () {
+        document.getElementById('editUserForm').submit();
+    });
 </script>
