--- a/Pages/ECStaffDatabase/Index.cshtml
+++ b/Pages/ECStaffDatabase/Index.cshtml
@@ -105,9 +105,9 @@
 
 
 <script>
-	function confirmDelete(centerID) {
+	function confirmDelete(ecStaffID) {
 		if (confirm("Are you sure you want to delete this ec staff?")) {
-			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerID;
+			window.location.href = "/ECStaffDatabase/DeleteECStaffDatabase?ecStaffID=" + ecStaffID;
 		}
 	}
 </script>
