--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -184,7 +184,7 @@
 
 </script>
 
-<!-- Row Click -->
+<!-- Clickable Row for Disaster Profile -->
 <script>
 	document.addEventListener("DOMContentLoaded", function () {
 		const rows = document.querySelectorAll(".data-row");
