--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -7,24 +7,26 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/bootswatch_Zephyr.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 </head>
 <body>
 
-    <header>
+    <!-- Top Navigation Bar -->
+    <div id="top-nav">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary shadow-lg mb-3">
             <div class="container-fluid">
-                
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
                     <img src="/white-logo-horizontal.png" alt="" height="30" id="logo" style="margin-left: 15px;">
                 </a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-                    <ul class="navbar-nav" style="padding:5px 10px 10px 0;">
+                    <ul class="navbar-nav" style="padding: 5px 10px 10px 0;">
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Index">Dashboard</a>
                         </li>
@@ -34,7 +36,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/EvacuationCenter/Index">Evacuation Center</a>
                         </li>
-
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Database</a>
                             <ul class="dropdown-menu" data-bs-theme="light">
@@ -42,18 +43,12 @@
                                 <li><a class="nav-link text-dark" asp-area="" asp-page="/ECStaffDatabase/Index">EC Staff Database</a></li>
                             </ul>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/UserManagement/Index">Users</a>
                         </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Inventory/Index">Inventory</a>
-                        </li>
-
                         <li class="nav-item">
                             <a href="#" class="profile">
                                 <img src="~/sample-pic.jpg" alt="User Profile">
@@ -63,25 +58,17 @@
                 </div>
             </div>
         </nav>
-    </header>
-
-    <div class="container">
-        <main role="main" class="pb-3 pt-3">
-            @RenderBody()
-        </main>
     </div>
+
+    <main role="main" class="pb-3 pt-3 px-3 px-md-4">
+        @RenderBody()
+    </main>
 
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - AgapayAidSystem - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
-
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
