--- a/Pages/Disaster/AllocateEC.cshtml
+++ b/Pages/Disaster/AllocateEC.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model AgapayAidSystem.Pages.Disaster.AllocationEvacuationCenterModel
+@model AgapayAidSystem.Pages.Disaster.AllocateECModel
 @{
-    ViewData["Title"] = "Allocate Evacuation Center";
+	ViewData["Title"] = "Allocate Evacuation Center";
 }
 
 <style>
@@ -56,7 +56,6 @@
                                 <td>Community-Based Evacuation Center</td>
                                 <td>800</td>
                             </tr>
-                            <!-- Add more rows as needed -->
                         </tbody>
                     </table>
 
