--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,10 +59,6 @@ body {
     margin: 20px 10px; /* Add margin to create spacing between buttons */
 }
 
-.badge {
-    font-size: 0.875rem;
-}
-
 /*USER MANAGEMENT*/
 
 .breadcrumb-item active {
@@ -229,7 +225,7 @@ body {
 
 /*ENTRY LOG*/
 
-#sidebar .nav .nav-item .active {
+.nav-link.active {
     font-weight: bold;
     color: var(--bs-primary-color);
 }
